<?xml version="1.0" encoding="utf-8"?>
<resources>
     
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Calculator</string>
     
    <string name="button_ok">Ok</string>
    <string name="button_equals">=</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_0">0</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_C">AC</string>
    <string name="button_delete">del</string>
    <string name="button_divided">/</string>
    <string name="button_cos">cos</string>
    <string name="button_sin">sin</string>
    <string name="button_tan">tan</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_yu">%</string>
    <string name="button_dian">.</string>
    <string name="button_huilv">汇率</string>
    <string name="button_zhishucimi">^</string>
    <string name="button_genhao">√</string>
    <string name="button_luoge">lg</string>
    <string name="button_pai">π</string>
    <string name="button_e">e</string>
    <string name="button_ln">ln</string>
    <string name="button_youkuohao">)</string>
</resources>
